# geonode-project

./: .env  .env.sample  .env_sample  .flake8  .gitignore  .override_dev_env.sample  Dockerfile  Makefile  README.md  README.rst  Vagrantfile  Vagrantfile.compose  Vagrantfile.stack  antani-vagrant-compose.sh  antani-vagrant-swarm.sh  antani-vagrant.sh  build_env.py  celery.sh  create-envfile.py  dev_config.yml  docker-build.sh  docker-compose-local-builds-yml  docker-compose.development.override.yml  docker-compose.development.yml  docker-compose.override.yml  docker-compose.yml  docker-purge.sh  entrypoint.sh  generated-project-vagrant-compose.sh  generated-project-vagrant-swarm.sh  geonode-stack.yml  manage.py  manage.sh  monitoring-cron  pavement.py  paver_dev.sh.sample  playbook.yml  requirements.txt  run_dev.sh  setup.py  (+5 more)
.codeql/: codeql-config.yml
.devcontainer/: .gitignore  README.md  docker-compose.yml  docker.sh
fixtures/: default_oauth_apps.json  sites_template.json
geonode/: settings.py
project_name/: __init__.py  apps.py  celeryapp.py  local_settings.py  local_settings.py.geoserver.sample  local_settings.py.sample  settings.py  (+4 more)
src/: README.md  celery-cmd  celery.sh  dev_config.yml  entrypoint.sh  gunicorn.conf.py  manage.py  manage.sh  manage_dev.sh.sample  pavement.py  paver.sh  paver_dev.sh.sample  pyproject.toml  requirements.txt  setup.py  tasks.py  uwsgi.ini
src/fixtures/: apikey_docker.json  initial_data.json
src/geonode_project/: __init__.py  apps.py  celeryapp.py  settings.py  urls.py  version.py  wsgi.py
src/geonode_project/br/: backup.sh  restore.sh  settings_docker.ini
src/geonode_project/static/: README  gulpfile.js
src/geonode_project/templates/geonode-mapstore-client/: _geonode_config.html
src/package/support/: geonode.updateip
src/project/: __init__.py  apps.py  celeryapp.py  settings.py  urls.py  version.py  wsgi.py
src/project/br/: backup.sh  restore.sh
src/project/static/: package.json
src/project_name/: __init__.py  apps.py  celeryapp.py  settings.py  urls.py  wsgi.py
src/project_name/br/: backup.sh  restore.sh  settings_docker.ini
src/project_name/templates/: geonode_base.html
(+65 files in other folders)
